// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseApiResponse 1`] = `
Object {
  "amount": "5.76800000",
  "price": "655.20000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524805049034",
  "tradeId": "1524805049034",
  "tradeType": "buy",
}
`;

exports[`parseTrade 1`] = `
Object {
  "amount": "1.00000000",
  "price": "630.44000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524740175400",
  "tradeId": "1524740175400",
  "tradeType": "sell",
}
`;

exports[`parseTrade 2`] = `
Object {
  "amount": "1.73300000",
  "price": "630.43000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524740175408",
  "tradeId": "1524740175408",
  "tradeType": "sell",
}
`;

exports[`parseTrade 3`] = `
Object {
  "amount": "0.13274374",
  "price": "630.24000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524740175412",
  "tradeId": "1524740175412",
  "tradeType": "sell",
}
`;

exports[`parseTrade 4`] = `
Object {
  "amount": "0.02583083",
  "price": "629.99000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524740181690",
  "tradeId": "1524740181690",
  "tradeType": "buy",
}
`;

exports[`parseTrade 5`] = `
Object {
  "amount": "0.34977855",
  "price": "630.00000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524740181697",
  "tradeId": "1524740181697",
  "tradeType": "buy",
}
`;

exports[`parseTrade 6`] = `
Object {
  "amount": "3.62439062",
  "price": "630.00000",
  "source": "KRAKEN",
  "sourceTimestamp": "1524740181701",
  "tradeId": "1524740181701",
  "tradeType": "buy",
}
`;
